# meanshift-tracking

./: .gitignore  README.md  setup.cfg  setup.py
lib/: Makefile  histogram.cpp  histogram.h
scripts/: drift  rotation-center
scripts/imagej/: drift-correction.py
src/: histogram.cpp  histogram.h  meanshift.c  meanshift.pyx
src/meanshift/: __init__.py  core.py
