[metadata]
name = meanshift-tracking
version = 0.1.0
url = https://github.com/kshkss/meanshift-tracking
summary = Tools using meanshift tracking algorithm
description-content-type = text/markdown
description-file = README.md
author = Akishika Issui
license-file = LICENSE.txt
classifiers =
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  Development Status :: 3 - Alpha
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  #Operating System :: POSIX

