[metadata]
name = meanshift-tracking
version = attr: meanshift_version.__version__
description = Tools using meanshift tracking algorithm
long_description = file: README.md
url = https://github.com/kshkss/meanshift-tracking
author = Akishika Issui
license = GNU GENERAL PUBLIC LICENSE Version 3 (GPLv3)
keywords = meanshift, tracking
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research

[options]
package_dir =
  =src

[options.packages.find]
where = src

